<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/bt_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/callphone" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="getClick"
            android:text="@string/click" />


        <!--下面是发送短信的demo-->

        <EditText
            android:id="@+id/et_message_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numberhint"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_message_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/contenthint"
            android:lines="5" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sendMessage"
            android:text="@string/sendMessage" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="newPage"
            android:text="@string/nextpage" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="getSpace"
            android:text="@string/getSpace" />

        <TextView
            android:id="@+id/tv_spaceshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0800ff"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="backupMessage"
            android:text="备份短信" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="ShowData"
            android:text="show data" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showListView"
            android:text="show list" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showListView2"
            android:text="show list2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showArrayListview"
            android:text="show arraylistview" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="ShowDialog"
            android:text="对话框" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showNetImage"
            android:text="Net Image" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showNetCacheImage"
            android:text="NetCacheImage" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="smartImage"
            android:text="smartImage" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="htmlSource"
            android:text="html查看" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openNews"
            android:text="Open news" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="threadDownload"
            android:text="多线程断点续传" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="xutilPage"
            android:text="xutil download" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="好友指数计算"
            android:onClick="passData"
            />
    </LinearLayout>

</ScrollView>